<resources>
    <string name="app_name">Lappen Fashion</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="studio">Studio</string>
    <string name="explore">Explore</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="deals_of_the_day">Deals of the day</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="track_order">Track Order</string>
    <string name="cards">Cards</string>
    <string name="logout">Logout</string>
    <string name="signup">Signup</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="continue_">Continue</string>
    <string name="login_signup">Login/Signup</string>
    <string name="shopping_bag">Shopping Bag</string>
    <string name="remove">Remove</string>
    <string name="move_to_wishlist">Move to wishlist</string>
    <string name="wishlist">Wishlist</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="address">Address</string>
    <string name="standard_delivery">Standard Delivery</string>
    <string name="place_your_order_before_6pm_and_your_items_will_be_delivered_the_next_day">Place your order before 6pm and your items will be delivered the next day</string>
    <string name="next_day_delivery">Next Day Delivery</string>
    <string name="pick_a_particular_date_from_the_calendar_and_order_will_be_delivered_on_selected_date">Pick a particular date from the calendar and order will be delivered on selected date</string>
    <string name="next">NEXT</string>
    <string name="nominated_delivery">Nominated Delivery</string>
    <string name="billing_address_is_the_same_as_delivery_address">Billing address is the same as delivery address</string>
    <string name="street_1">Street 1</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street_2">Street 2</string>
    <string name="back">BACK</string>
    <string name="trending">Trending</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="accessories_for_you">Accessories for you</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="details">Details</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="name">Name *</string>
    <string name="pincode">Pincode *</string>
    <string name="some_thing_happend_wrong">Some thing happend wrong</string>
    <string name="state_comp">State *</string>
    <string name="address_street">Address (House No, Building, Street, Area) *</string>
    <string name="locality_town">Locality / Town *</string>
    <string name="city_district">City / District *</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_data_found">No Data Found</string>
    <string name="add_address">Add Address</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="change_your_address">Change Your Address</string>
    <string name="place_order">Place Order</string>
    <string name="size_fit"><![CDATA[Size & Fit]]></string>
    <string name="material_care"><![CDATA[Material & Care]]></string>
    <string name="style_note">Style Note</string>
    <string name="genuine_product">Genuine Product</string>
    <string name="quality_checked">Quality Checked</string>
    <string name="cash_on_delivery_available">Cash on delivery available</string>
    <string name="easy_30_days_return_exchange_available"><![CDATA[Easy 7 days return & exchange available]]></string>
    <string name="no_products_available_for_this_category">No products available for this category!</string>
    <string name="sort_by">Sort By</string>
    <string name="apply">Apply</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="discount">Discount</string>
    <string name="filters">Filters</string>
    <string name="price">Price</string>
    <string name="selected_price_range">Selected Price range</string>
    <string name="_10_and_above">10% and above</string>
    <string name="_20_and_above">20% and above</string>
    <string name="_30_and_above">30% and above</string>
    <string name="_50_and_above">50% and above</string>
    <string name="_40_and_above">40% and above</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="payment_option">Payment Option</string>
    <string name="grand_total">Grand Total</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="price_details">Price Details</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="product_review">Product Review</string>
    <string name="notification">Notification</string>
    <string name="pocket_style">Pocket Style</string>
    <string name="sleeve">Sleeve</string>
    <string name="sleeve_fit">Sleeve Fit</string>
    <string name="fabric">Fabric</string>
    <string name="fabric_care">Fabric Care</string>
    <string name="key_features">Key Features</string>
    <string name="technology_used">Technology Used</string>
    <string name="reversible">Reversible</string>
    <string name="country_of_origin">Country of origin</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty</string>
    <string name="size_chart">Size Chart</string>

    <array name="rangeSliderValues">
        <item>20</item>
        <item>400</item>
    </array>

    <string-array name="size">
        <item>Size :10</item>
        <item>Size :20</item>
        <item>Size :30</item>
    </string-array>

    <string-array name="qty">
        <item>Qty :1</item>
        <item>Qty :2</item>
        <item>Qty :3</item>
    </string-array>
</resources>