<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtOutOfStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_12ssp"
                android:text="@string/sort_by">

            </TextView>

            <TextView
                android:id="@+id/txtLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_12ssp"
                android:text="@string/price_high_to_low">

            </TextView>

            <TextView
                android:id="@+id/txtHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_12ssp"
                android:text="@string/price_low_to_high">

            </TextView>

            <TextView
                android:id="@+id/txtDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_12ssp"
                android:text="@string/discount">

            </TextView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>