<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/toolbar_with_back_button"></include>

    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearBottom"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:inputType="text"
                android:fontFamily="@font/sfpro_medium"
                android:imeOptions="actionNext"
                android:paddingBottom="@dimen/_15sdp"
                android:hint="@string/name">
                
            </EditText>

            <EditText
                android:id="@+id/edtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:inputType="number"
                android:fontFamily="@font/sfpro_medium"
                android:imeOptions="actionNext"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:hint="@string/mobile_number">

            </EditText>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtPincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/sfpro_medium"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:hint="@string/pincode">

                </EditText>

                <EditText
                    android:id="@+id/edtState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:inputType="text"
                    android:fontFamily="@font/sfpro_medium"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:hint="@string/state_comp">

                </EditText>

            </LinearLayout>

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:inputType="text"
                android:fontFamily="@font/sfpro_medium"
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:hint="@string/address_street">

            </EditText>

            <EditText
                android:id="@+id/edtLocality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:inputType="text"
                android:fontFamily="@font/sfpro_medium"
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:hint="@string/locality_town">

            </EditText>

            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:inputType="text"
                android:fontFamily="@font/sfpro_medium"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:hint="@string/city_district">

            </EditText>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dark_grey"
                    android:paddingLeft="@dimen/_5sdp"
                    android:fontFamily="@font/sfpro_medium"
                    android:textSize="@dimen/_12ssp"
                    android:text="Home">

                </RadioButton>

                <RadioButton
                    android:id="@+id/radioOffice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/sfpro_medium"
                    android:buttonTint="@color/dark_grey"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="Office">

                </RadioButton>

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10ssp"
            android:layout_weight="1"
            android:background="@color/background"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:fontFamily="@font/sfpro_regular"
            android:textColor="@color/black"
            android:text="@string/cancel">

        </TextView>

        <TextView
            android:id="@+id/txtSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10ssp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:fontFamily="@font/sfpro_regular"
            android:textColor="@color/white"
            android:text="@string/save">

        </TextView>
    </LinearLayout>

</RelativeLayout>