<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:text="@string/filters">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_above="@id/linearBottom"
            android:layout_below="@id/txtFilter"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/background"
                android:layout_weight="1.3">

                <TextView
                    android:id="@+id/txtSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/black">

                </View>

                <TextView
                    android:id="@+id/txtColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/black">

                </View>

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/price" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/black">

                </View>

                <TextView
                    android:id="@+id/txtDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/discount" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/black">

                </View>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.7">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:scrollbars="none">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:scrollbars="none">

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:id="@+id/linearPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"
                        android:text="@string/selected_price_range">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/_12sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:textColor="@color/wishlist_desc_color"
                        android:text="₹ - 0 to  ₹ - 400">

                    </TextView>

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:values="@array/rangeSliderValues"
                        android:stepSize="5"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@color/white"
                        app:thumbColor="@color/colorAccent"
                        app:tickColor="@color/white"
                        app:labelStyle="@style/Widget.App.Tooltip"
                        app:trackColor="@color/background"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:valueFrom="0"
                        android:valueTo="3000" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:padding="@dimen/_10sdp"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/discountGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio10Percent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/_10_and_above"
                            android:buttonTint="@color/colorAccent">

                        </RadioButton>

                        <RadioButton
                            android:id="@+id/radio20Percent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/_20_and_above"
                            android:buttonTint="@color/colorAccent">

                        </RadioButton>

                        <RadioButton
                            android:id="@+id/radio30Percent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/_30_and_above"
                            android:buttonTint="@color/colorAccent">

                        </RadioButton>

                        <RadioButton
                            android:id="@+id/radio40Percent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/_40_and_above"
                            android:buttonTint="@color/colorAccent">

                        </RadioButton>

                        <RadioButton
                            android:id="@+id/radio50Percent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/_50_and_above"
                            android:buttonTint="@color/colorAccent">

                        </RadioButton>

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_10sdp">

            </TextView>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@color/dark_grey">

            </View>

            <TextView
                android:id="@+id/txtApply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/apply"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp">

            </TextView>
        </LinearLayout>


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>