<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:weightSum="5">

    <LinearLayout
        android:id="@+id/linearHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imgHome"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@mipmap/ic_bulk_home">
        </ImageView>

        <TextView
            android:id="@+id/txtHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/home"
            android:textSize="@dimen/_10ssp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearCategories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@mipmap/ic_light_category">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/categories"
            android:gravity="center"
            android:textSize="@dimen/_10ssp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearStudio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@mipmap/ic_light_camera">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/studio"
            android:gravity="center"
            android:textSize="@dimen/_10ssp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearExplore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@mipmap/ic_light_chart">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/explore"
            android:gravity="center"
            android:textSize="@dimen/_10ssp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@mipmap/ic_light_profile">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_medium"
            android:text="@string/user"
            android:gravity="center"
            android:textSize="@dimen/_10ssp">

        </TextView>

    </LinearLayout>
</LinearLayout>